# joltc

./: .gitignore  CMakeLists.txt  build.md
.claude/: settings.local.json
cmake/: zig-linux-aarch64.toolchain.cmake  zig-linux-x86_64.toolchain.cmake  zig.toolchain.cmake
include/: joltc.h
samples/: CMakeLists.txt
samples/01_HelloWorld/: main.cpp
samples/02_RemoveBodyOnContact/: main.cpp
src/: joltc.cpp
swig/: CMakeLists.txt  joltphysics.i  joltphysics_helpers.cpp  joltphysics_helpers.h
swig/test/: JoltPhysicsSwigTest.csproj  Program.cs
tests/: test_physics_system.cpp
